--- a/translations/bloody_grail.tex/cs.po
+++ b/translations/bloody_grail.tex/cs.po
@@ -170,7 +170,7 @@ msgid ""
 msgstr ""
 "\\textbf{Počáteční Jednotky:}\n"
 "\\begin{itemize}\n"
-"  \\item Málo \\svgunit{bronze} Jednotek s \\textit{nejvyššími} náklady na Verbování\n"
+"  \\item Hrstka \\svgunit{bronze} Jednotek s \\textit{nejvyššími} náklady na Verbování\n"
 "  \\item Skupinu \\svgunit{bronze} Jednotek s \\textit{nejnižšími} náklady na Verbování\n"
 "\\end{itemize}\n"
 "\n"
@@ -392,7 +392,7 @@ msgstr ""
 "    \\begin{enumerate}\n"
 "      \\item \\textbf{[1. Obelisk]} Hoďte 2 \\svg{treasure} a vyberte 1 k vyřešení; poté získejte \\svg{morale_negative}.\n"
 "      \\item \\textbf{[2. Obelisk]} Zvyšte svůj příjem \\svg{gold}, \\svg{building_materials}, nebo \\svg{valuables} o 1 krok.\n"
-"      \\item \\textbf{[3. Obelisk]} Získáte Vedlejšího Hrdinu. Umístěte jeho model na toto Pole. Pokud již Vedlejšího Hrdinu máte, získejte místo toho 3 \\svg{gold}. Poté vyberte jednoho nepřátelského hráče, aby odhodil 2 náhodné Karty ze své ruky.\n"
+"      \\item \\textbf{[3. Obelisk]} Získáte Sekundárního Hrdinu. Umístěte jeho model na toto Pole. Pokud již Sekundárního Hrdinu máte, získejte místo toho 3 \\svg{gold}. Poté vyberte jednoho nepřátelského hráče, aby odhodil 2 náhodné Karty ze své ruky.\n"
 "      \\item \\textbf{[4. Obelisk]} Odstraňte až 4 Karty ze své ruky, s výjimkou Karet Statistik; poté vyhledejte v každém odpovídajícím Balíčku Kartu dle vašeho výběru a vložte ji do své ruky.\n"
 "    \\end{enumerate}\n"
 "    \\item \\textbf{[Oběť]} Odstraňte Kartu Jednotky své Frakce z vašeho Balíčku Jednotek výměnou za:\n"
@@ -405,7 +405,7 @@ msgstr ""
 "  \\item Hráč, který si zvolí \\textbf{Oběť} u Obelisku, získá titul \\uv{\\textcolor{darkcandyapplered}{Krvavý Rytíř}}. Umístěte červenou Kostičku Frakce na portrét jejich Hrdiny, aby byl tento efekt označen. \\textcolor{darkcandyapplered}{Krvavý Rytíř} nikdy nesmí zvolit možnost \\textbf{Očištění} při Navštěvování Obelisku.\n"
 "  \\item Hráč, který si zvolí \\textbf{Očištění} u Obelisku, získá titul \\uv{\\textcolor{cobalt}{Rytíř Grálu}.} Umístěte modrou Kostičku Frakce na portrét jejich Hrdiny, aby byl tento efekt označen. \\uv{\\textcolor{cobalt}{Rytíř Grálu}} nikdy nesmí zvolit možnost \\textbf{Oběť} při Navštěvování Obelisku.\n"
 "  \\item Když hráč zvolí \\textbf{Oběť} u Obelisku, umístěte počet Kostiček Frakce na obětovanou Kartu Jednotky a na Pole Obelisku ekvivalentní počtu, kolikrát hráč zvolil možnost \\textbf{Oběť}. Například, pokud hráč obětuje podruhé, umístěte 2 Kostičky Frakce na Kartu Jednotky a 2 Kostičky Frakce na Pole Obelisku.\n"
-"  \\item Hráč, který má titul \\uv{\\textcolor{cobalt}{Rytíř Grálu}}, může po Navštívení Obelisku naverbovat nepřátelskou Jednotku obětovanou u tohoto Obelisku za poloviční cenu (zaokrouhleno dolů); pokud byla obětována Skupina, hráč může místo toho zvolit naverbovat Málo.\n"
+"  \\item Hráč, který má titul \\uv{\\textcolor{cobalt}{Rytíř Grálu}}, může po Navštívení Obelisku naverbovat nepřátelskou Jednotku obětovanou u tohoto Obelisku za poloviční cenu (zaokrouhleno dolů); pokud byla obětována Skupina, hráč může místo toho zvolit naverbovat Hrstku.\n"
 "  \\item Pokud je Jednotka naverbovaná u Obelisku poražena, Odstraňte ji.\n"
 "  \\item Hráč, který nemá žádný titul nebo má titul \\uv{\\textcolor{darkcandyapplered}{Krvavý Rytíř}}, nemůže použít Kartu Dovednosti Diplomacie. Pokud hráč, který nemá žádný titul nebo má titul \\uv{\\textcolor{darkcandyapplered}{Krvavý Rytíř}}, vytáhne Kartu Dovednosti Diplomacie, může ji ukázat ostatním hráčům, poté ji odhodit a místo ní si vzít novou Kartu Dovednosti.\n"
 "  \\item Hráč, který má titul \\uv{\\textcolor{cobalt}{Rytíř Grálu}}, nemůže použít Kartu Dovednosti Diplomacie k Naverbování Neutrálních \\svgunit{azure} Jednotek.\n"
