--- a/translations/inferno_devilish_plan.tex/cs.po
+++ b/translations/inferno_devilish_plan.tex/cs.po
@@ -277,7 +277,7 @@ msgid ""
 msgstr ""
 "\\begin{itemize}\n"
 "  \\item Skupina Rarášků\n"
-"  \\item Málo Magogů\n"
+"  \\item Hrstka Magogů\n"
 "\\end{itemize}\n"
 "\n"
 
@@ -345,7 +345,7 @@ msgid ""
 msgstr ""
 "\\begin{itemize}\n"
 "  \\item \\textbf{Armáda Zlatých Draků:} Skupina Zlatých Draků, skupina Jednorožců, skupina Dendroidů, skupina Kentaurů\n"
-"  \\item \\textbf{Ivorova Armáda:} Málo Elfů\\footnote{V 9. Kole je Málo Elfů v Ivorově armádě posíleno na Skupinu Elfů.}, Neutrální armáda na úrovni vašeho Hrdiny\\footnote{Viz strana 35, \\uv{Tabulka Obtížnosti Pole} v Základních Pravidlech, pro další podrobnosti o počtu Neutrálních Jednotek, které musíte dobrat pro tuto Neutrální Armádu.}\n"
+"  \\item \\textbf{Ivorova Armáda:} Hrstka Elfů\\footnote{V 9. Kole je Hrstka Elfů v Ivorově armádě posíleno na Skupinu Elfů.}, Neutrální armáda na úrovni vašeho Hrdiny\\footnote{Viz strana 35, \\uv{Tabulka Obtížnosti Pole} v Základních Pravidlech, pro další podrobnosti o počtu Neutrálních Jednotek, které musíte dobrat pro tuto Neutrální Armádu.}\n"
 "\\end{itemize}\n"
 "\n"
 
@@ -568,7 +568,7 @@ msgid ""
 msgstr ""
 "\\textbf{9. Kolo:}\n"
 "\\begin{itemize}\n"
-"  \\item Málo Elfů z Ivorovy Armády je Posíleno na skupinu Elfů.\n"
+"  \\item Hrstka Elfů z Ivorovy Armády je Posíleno na skupinu Elfů.\n"
 "    Ivorova Armáda také získává Vozík s Municí.\n"
 "\\end{itemize}\n"
 "\n"
