--- a/translations/inferno_steadwicks_fall.tex/cs.po
+++ b/translations/inferno_steadwicks_fall.tex/cs.po
@@ -287,8 +287,8 @@ msgid ""
 "\n"
 msgstr ""
 "\\begin{itemize}\n"
-"  \\item Málo Troglodytů\n"
-"  \\item Málo Zlých Očí\n"
+"  \\item Hrstka Troglodytů\n"
+"  \\item Hrstka Zlých Očí\n"
 "  \\item Skupina Rarášků\n"
 "\\end{itemize}\n"
 "\n"
@@ -561,7 +561,7 @@ msgid ""
 "Place your Secondary Hero, represented by one Dungeon Faction Hero model of your choice, on the Settlement of the F2 Map Tile. This Settlement produces no resources.\n"
 "\n"
 msgstr ""
-"Umístěte svého Vedlejšího Hrdinu, reprezentovaného jedním modelem Hrdiny Frakce Kobka (podle vašeho výběru),\n"
+"Umístěte svého Sekundárního Hrdinu, reprezentovaného jedním modelem Hrdiny Frakce Kobka (podle vašeho výběru),\n"
 "na Pole Osady Dílku F2. Tato Osada neprodukuje žádné suroviny.\n"
 "\n"
 
@@ -821,7 +821,7 @@ msgstr ""
 "    \\item Nepřátelští Útočící Hrdinové mají pouze 2 BP, místo 3. Ignorují vše ostatní\n"
 "      (včetně Dolů a Osad, pokud je to možné) a jdou přímo do hráčova Města Frakce (na Dílku Mapy S6).\n"
 "      Nepokračují přímo za hráčem, ale pokud se náhodou nacházejí na stejném Dílku Mapy, zaútočí\n"
-"      na Hlavního Hrdinu hráče (ne Vedlejšího).\n"
+"      na Hlavního Hrdinu hráče (ne Sekundárního).\n"
 "    \\item Nepřátelští Útočící Hrdinové se pohybují po skončení Tahu hráče.\n"
 "    \\item Hranice na Startovním Dílku Mapy Hrad S3 nelze překročit žádným způsobem, dokud\n"
 "      všechny Nepřátelské Osady (F3, F10, \\#F1) nebudou poraženy.\n"
