--- a/translations/dragoncurse_castle.tex/cs.po
+++ b/translations/dragoncurse_castle.tex/cs.po
@@ -315,7 +315,7 @@ msgstr ""
 "  \\item Náhodné Město je bráněno Zdmi a Bránou, když je vlastněno hráčem, ale má Střílnu pouze tehdy, pokud má hráč již Citadelu.\n"
 "  \\item Stejně jako jakékoli jiné Město, když je Náhodné Město vlastněno hráčem, je platným místem pro tohoto hráče k:\n"
 "    \\begin{itemize}\n"
-"      \\item Umístění nově naverbovaného Vedlejšího Hrdiny.\n"
+"      \\item Umístění nově naverbovaného Sekundárního Hrdiny.\n"
 "      \\item Umístění Hlavního Hrdiny po jeho porážce.\n"
 "      \\item Dočasnému transportu armády za 8~\\svg{gold}, když je Náhodné Město napadeno.\n"
 "    \\end{itemize}\n"
