--- a/translations/emerald_island.tex/cs.po
+++ b/translations/emerald_island.tex/cs.po
@@ -120,7 +120,7 @@ msgid ""
 msgstr ""
 "\\textbf{Počáteční Jednotky:}\n"
 "\\begin{itemize}\n"
-"  \\item Skupina \\svgunit{bronze} Jednotek dle tvého výběru\n"
+"  \\item Tlupa \\svgunit{bronze} Jednotek dle tvého výběru\n"
 "  \\item Hrstka \\svgunit{bronze} Jednotek dle tvého výběru\n"
 "\\end{itemize}\n"
 "\n"
