--- a/translations/inferno_devilish_plan.tex/cs.po
+++ b/translations/inferno_devilish_plan.tex/cs.po
@@ -276,7 +276,7 @@ msgid ""
 "\n"
 msgstr ""
 "\\begin{itemize}\n"
-"  \\item Skupina Rarášků\n"
+"  \\item Tlupa Rarášků\n"
 "  \\item Hrstka Magogů\n"
 "\\end{itemize}\n"
 "\n"
@@ -344,8 +344,8 @@ msgid ""
 "\n"
 msgstr ""
 "\\begin{itemize}\n"
-"  \\item \\textbf{Armáda Zlatých Draků:} Skupina Zlatých Draků, skupina Jednorožců, skupina Dendroidů, skupina Kentaurů\n"
-"  \\item \\textbf{Ivorova Armáda:} Hrstka Elfů\\footnote{V 9. Kole je Hrstka Elfů v Ivorově armádě posíleno na Skupinu Elfů.}, Neutrální armáda na úrovni vašeho Hrdiny\\footnote{Viz strana 35, \\uv{Tabulka Obtížnosti Pole} v Základních Pravidlech, pro další podrobnosti o počtu Neutrálních Jednotek, které musíte dobrat pro tuto Neutrální Armádu.}\n"
+"  \\item \\textbf{Armáda Zlatých Draků:} Tlupa Zlatých Draků, Tlupa Jednorožců, Tlupa Dendroidů, Tlupa Kentaurů\n"
+"  \\item \\textbf{Ivorova Armáda:} Hrstka Elfů\\footnote{V 9. Kole je Hrstka Elfů v Ivorově armádě posíleno na Tlupu Elfů.}, Neutrální armáda na úrovni vašeho Hrdiny\\footnote{Viz strana 35, \\uv{Tabulka Obtížnosti Pole} v Základních Pravidlech, pro další podrobnosti o počtu Neutrálních Jednotek, které musíte dobrat pro tuto Neutrální Armádu.}\n"
 "\\end{itemize}\n"
 "\n"
 
@@ -568,7 +568,7 @@ msgid ""
 msgstr ""
 "\\textbf{9. Kolo:}\n"
 "\\begin{itemize}\n"
-"  \\item Hrstka Elfů z Ivorovy Armády je Posíleno na skupinu Elfů.\n"
+"  \\item Hrstka Elfů z Ivorovy Armády je Posíleno na Tlupu Elfů.\n"
 "    Ivorova Armáda také získává Vozík s Municí.\n"
 "\\end{itemize}\n"
 "\n"
