--- a/translations/inferno_steadwicks_fall.tex/cs.po
+++ b/translations/inferno_steadwicks_fall.tex/cs.po
@@ -289,7 +289,7 @@ msgstr ""
 "\\begin{itemize}\n"
 "  \\item Hrstka Troglodytů\n"
 "  \\item Hrstka Zlých Očí\n"
-"  \\item Skupina Rarášků\n"
+"  \\item Tlupa Rarášků\n"
 "\\end{itemize}\n"
 "\n"
 
@@ -318,8 +318,8 @@ msgid ""
 msgstr ""
 "\\textbf{Bonus:} Vyberte jednu z následujících možností:\n"
 "\\begin{itemize}\n"
-"  \\item Přidejte si do ruky Skupinu Harpyjí.\n"
-"  \\item Přidejte si do ruky Skupinu Magogů.\n"
+"  \\item Přidejte si do ruky Tlupu Harpyjí.\n"
+"  \\item Přidejte si do ruky Tlupu Magogů.\n"
 "  \\item Přidejte si do ruky Vozík s Municí.\n"
 "  \\item Hledejte (4) v Balíčku Kouzel.\n"
 "\\end{itemize}\n"
@@ -352,7 +352,7 @@ msgid ""
 "\\textbf{General Kendal's Army:} A Pack of Archangels, a Pack of Champions, a Pack of Zealots, a Pack of Crusaders, a Pack of Griffins, a Balista War Machine\n"
 "\n"
 msgstr ""
-"\\textbf{Armáda Generála Kendala:} Skupina Archandělů, skupina Šampionů, skupina Fanatiků, skupina Křižáků, skupina Gryfů, Válečný Stroj Balista\n"
+"\\textbf{Armáda Generála Kendala:} Tlupa Archandělů, Tlupa Šampionů, Tlupa Fanatiků, Tlupa Křižáků, Tlupa Gryfů, Válečný Stroj Balista\n"
 "\n"
 
 #. type: multicols*
