--- a/translations/titans_stronghold.tex/cs.po
+++ b/translations/titans_stronghold.tex/cs.po
@@ -215,7 +215,7 @@ msgid ""
 msgstr ""
 "\\textbf{Počáteční Jednotky:}\n"
 "\\begin{itemize}\n"
-"  \\item Skupina \\svgunit{bronze} Jednotek dle tvého výběru\n"
+"  \\item Tlupa \\svgunit{bronze} Jednotek dle tvého výběru\n"
 "  \\item Hrstka \\svgunit{bronze} Jednotek dle tvého výběru\n"
 "\\end{itemize}\n"
 "\n"
