--- a/translations/dragoncurse_castle.tex/cs.po
+++ b/translations/dragoncurse_castle.tex/cs.po
@@ -312,7 +312,7 @@ msgstr ""
 "Během tohoto Scénáře:\n"
 "\\begin{itemize}\n"
 "  \\item Kdykoli je Obelisk Navštíven poprvé, hráč, který jej Navštíví, získává 2 \\svg{building_materials}.\n"
-"  \\item Náhodné Město je bráněno Zdmi a Bránou, když je vlastněno hráčem, ale má Střílnu pouze tehdy, pokud má hráč již Citadelu.\n"
+"  \\item Náhodné Město je bráněno Hradbami a Bránou, když je vlastněno hráčem, ale má Střílnu pouze tehdy, pokud má hráč již Citadelu.\n"
 "  \\item Stejně jako jakékoli jiné Město, když je Náhodné Město vlastněno hráčem, je platným místem pro tohoto hráče k:\n"
 "    \\begin{itemize}\n"
 "      \\item Umístění nově naverbovaného Sekundárního Hrdiny.\n"
