--- a/translations/inferno_deal_with_the_devil.tex/cs.po
+++ b/translations/inferno_deal_with_the_devil.tex/cs.po
@@ -458,7 +458,7 @@ msgid ""
 "\n"
 msgstr ""
 "Obě Karty Artefaktů všech Útočících Armád jsou považovány za Schopnosti a používají \\uv{slabší} efekt uvedený na Kartě.\n"
-"\\uv{Meč Pekelného Ohně} bude použit při Útocích a Odvetných Útocích. Není použit při Útocích na Zdi nebo Brány,\n"
+"\\uv{Meč Pekelného Ohně} bude použit při Útocích a Odvetných Útocích. Není použit při Útocích na Hradby nebo Brány,\n"
 "a zůstává v platnosti na Jednotce. \\uv{Štít Prokletých} nabývá účinku, když\n"
 "jakákoliv Jednotka Útočící Armády utrpí zranění z Útoku nebo Odvetného Útoku. Pokud Karta Schopnosti AI říká \\uv{udělej to znovu}, Karty Artefaktů se nevyužívají ihned znovu, ale použijí se, jakmile je další Jednotka schopna je využít.\n"
 "\n"
@@ -788,11 +788,11 @@ msgstr ""
 "    Nepřátelský Útočící Hrdina, který se může dostat nejblíže ke Kleesivu, se pohybuje jako první.\n"
 "  \\item Hrad a Bašta již mají všechny Doly pod kontrolou ve svém území (na rozdíl od Pekla). Umístěte nepřátelské\n"
 "    Kostičky na všechny jejich Doly.\n"
-"  \\item Vaše Zdi, Brány a Střílna v Kleesivu jsou po každém Souboji zcela obnoveny.\n"
-"  \\item Nepřátelské \\svg{unit_flying} Jednotky přeletí přes Zdi a Brány, aby zaútočily na vaše Jednotky, kdykoli to bude možné.\n"
+"  \\item Vaše Hradby, Brány a Střílna v Kleesivu jsou po každém Souboji zcela obnoveny.\n"
+"  \\item Nepřátelské \\svg{unit_flying} Jednotky přeletí přes Hradby a Brány, aby zaútočily na vaše Jednotky, kdykoli to bude možné.\n"
 "  \\item Nepřátelské \\svg{unit_ranged} Jednotky vždy zaútočí na Střílnu, jakmile nebudou k dispozici žádné jiné \\svg{unit_ranged} Jednotky.\n"
 "  \\item Nepřátelské Jednotky vždy zaútočí na vaše Jednotky, pokud je to možné. Pokud to není možné, zaútočí na Bránu,\n"
-"    a poté na Zdi.\n"
+"    a poté na Hradby.\n"
 "\\end{itemize}\n"
 "\n"
 
