--- a/translations/inferno_devilish_plan.tex/cs.po
+++ b/translations/inferno_devilish_plan.tex/cs.po
@@ -649,7 +649,7 @@ msgid ""
 msgstr ""
 "\\begin{itemize}\n"
 "    \\item Váš Hrdina nezískává Zkušenosti po úrovni 5.\n"
-"    \\item Nepřátelský Hrdina se nepohybuje a čeká pouze ve svém Městě. Začíná se Zdmi a Bránou na jejich straně Desky Bojiště.\n"
+"    \\item Nepřátelský Hrdina se nepohybuje a čeká pouze ve svém Městě. Začíná se Hradbami a Bránou na jejich straně Desky Bojiště.\n"
 "    \\item Na Dílek Mapy N7 nelze vstoupit, dokud není Ivor poražen.\n"
 "    \\item Na lokaci Dračí Utopie bojuje váš Hrdina s Armádou Zlatých Draků.\n"
 "    \\item \\uv{Hradní Bránu} nelze postavit.\n"
