--- a/translations/inferno_steadwicks_fall.tex/cs.po
+++ b/translations/inferno_steadwicks_fall.tex/cs.po
@@ -814,7 +814,7 @@ msgid ""
 "\n"
 msgstr ""
 "\\begin{itemize}\n"
-"    \\item Hrdina Generál Kendal se nepohybuje a čeká pouze ve svém Městě. Začíná se Zdmi, Bránou\n"
+"    \\item Hrdina Generál Kendal se nepohybuje a čeká pouze ve svém Městě. Začíná se Hradbami, Bránou\n"
 "      a Střílnou na jejich straně Desky Bojiště.\n"
 "    \\item Úroveň obtížnosti každého Souboje se do konce Scénáře zvýší o jednu Úroveň\n"
 "      (viz strana 35, \\uv{Tabulka Obtížnosti Pole} v Základních Pravidlech).\n"
