--- a/translations/the_hunt.tex/cs.po
+++ b/translations/the_hunt.tex/cs.po
@@ -254,7 +254,7 @@ msgstr ""
 "  \\item 2 × Startovní (I) Dílek Mapy\n"
 "  \\item 2 × Blízký (IV--V) Dílek Mapy\n"
 "  \\item 2 × Vzdálený (II--III) Dílek Mapy\n"
-"  \\item 1 × Středový (VI--VII) Dílek Mapy; umístěte Černou Kostičku nebo Miniaturu představující Draka do středu Dílku\n"
+"  \\item 1 × Středový (VI--VII) Dílek Mapy; umístěte Černou Kostičku nebo Figurku představující Draka do středu Dílku\n"
 "\\end{itemize}\n"
 "\n"
 
@@ -276,7 +276,7 @@ msgstr ""
 "  \\item 3 × Startovní (I) Dílek Mapy\n"
 "  \\item 3 × Blízký (IV--V) Dílek Mapy\n"
 "  \\item 3 × Vzdálený (II--III) Dílek Mapy\n"
-"  \\item 1 × Středový (VI--VII) Dílek Mapy; umístěte Černou Kostičku nebo Miniaturu představující Draka do středu Dílku\n"
+"  \\item 1 × Středový (VI--VII) Dílek Mapy; umístěte Černou Kostičku nebo Figurku představující Draka do středu Dílku\n"
 "\\end{itemize}\n"
 "\n"
 
@@ -439,7 +439,7 @@ msgstr ""
 "o moc větší než většina draků, ale říká se, že je schopné vydržet dlouhodobý "
 "fyzický útok. Říká se, že ti, kdo stojí tváří v tvář Azurovému Drakovi, mají "
 "tendenci zamrznout čistým strachem. } \\medskip \\\\ \\textbf{Souboj s Azurovým "
-"Drakem:} \\begin{enumerate} \\item Umístěte Miniaturu/Kartu Azurového Draka "
+"Drakem:} \\begin{enumerate} \\item Umístěte Figurku/Kartu Azurového Draka "
 "na Bojiště. Ignorujte jeho schopnost. \\item Připravte hromádku odhozených "
 "Artefaktů a zamíchejte ji. \\end{enumerate} \\medskip \\textbf{Pravidla:} "
 "\\begin{itemize} \\item \\textit{Shromažďovací Tendence:} Na začátku každého "
@@ -533,7 +533,7 @@ msgstr ""
 "magickým srdcem. Často se používá jako výcvikový nástroj pro mladé zabijáky "
 "draků a mnoho kouzelníků také vytváří tato stvoření kvůli krystalu, který "
 "vylučují. } \\medskip \\\\ \\textbf{Souboj s Krystalovým Drakem:} "
-"\\begin{enumerate} \\item Umístěte Miniaturu/Kartu Krystalového Draka na "
+"\\begin{enumerate} \\item Umístěte Figurku/Kartu Krystalového Draka na "
 "bojiště. Ignorujte jeho schopnost. \\item Umístěte dva Zlaté Golemy a dva "
 "Diamantové Golemy na bojiště. \\end{enumerate} \\medskip \\textbf{Pravidla:} "
 "\\begin{itemize} \\item Na začátku každého Kola Souboje zkontrolujte, zda byli "
@@ -629,7 +629,7 @@ msgstr ""
 "Draci jako svůj hlavní útok vypouštějí koncentrovanou kyselinu. Tato "
 "kyselina je schopna prokousat se nejsilnějším brněním, snížit obranu svého "
 "cíle a zároveň způsobit další poškození. } \\medskip \\\\ \\textbf{Souboj s "
-"Rezavým Drakem:} \\begin{enumerate} \\item Umístěte Miniaturu/Kartu Rezavého "
+"Rezavým Drakem:} \\begin{enumerate} \\item Umístěte Figurku/Kartu Rezavého "
 "Draka na bojiště. Ignorujte jeho schopnost. \\item Připravte čtyři náhradní "
 "Karty Balíčku M\\&M k označení kaluží kyseliny. \\end{enumerate} \\medskip "
 "\\textbf{Pravidla:} \\begin{itemize} \\item Rezavý Drak je imunní vůči "
