--- a/translations/the_hunt.tex/cs.po
+++ b/translations/the_hunt.tex/cs.po
@@ -735,7 +735,7 @@ msgstr ""
 "Všechna Kouzla jsou viditelně zobrazena vedle Desky Bojiště: "
 "\\begin{enumerate} \\item První Kouzlo je \\textit{Blesk}. \\item Druhé "
 "Kouzlo je \\textit{Léčení}. \\item Pro třetí Kouzlo Pohádkový Drak náhodně "
-"vybere Expertní Kouzlo z Balíčku Kouzel, s výjimkou Kouzel Mapa \\svg{map}. "
+"vybere Pokročilé Kouzlo z Balíčku Kouzel, s výjimkou Kouzel Mapa \\svg{map}. "
 "Pokud je vybráno Kouzlo Mapa \\svg{map}, vytáhněte další Kouzlo. "
 "\\end{enumerate} \\item \\textit{Šprýmař:} V prvním Kole bitvy je první "
 "zacílený Pohádkový Drak pouhým Přeludem. Způsobuje poškození, ale zmizí z "
