--- a/translations/the_hunt.tex/cs.po
+++ b/translations/the_hunt.tex/cs.po
@@ -633,7 +633,7 @@ msgstr ""
 "Draka na bojiště. Ignorujte jeho schopnost. \\item Připravte čtyři náhradní "
 "Karty Balíčku M\\&M k označení kaluží kyseliny. \\end{enumerate} \\medskip "
 "\\textbf{Pravidla:} \\begin{itemize} \\item Rezavý Drak je imunní vůči "
-"základním Kouzlům. \\item \\textit{Korozivní Zvratky:} Rezavý Drak má mocnou "
+"bežným Kouzlům. \\item \\textit{Korozivní Zvratky:} Rezavý Drak má mocnou "
 "schopnost kontroly davu, která mu umožňuje vypustit čtyři kaluže sirné "
 "kyseliny na bojiště \\textit{na začátku} každého Kola Souboje. Použijte Karty "
 "Balíčku M\\&M umístěné lícem dolů k označení jejich poloh. \\item Rezavý "
@@ -730,7 +730,7 @@ msgstr ""
 "\\item Umístěte 1 Kartu Dendroida z \\svg{silver} Balíčku neutrálních "
 "Jednotek na bojiště a umístěte 3 další Karty lícem dolů, aby představovaly "
 "další 3 Dendroidy. \\end{enumerate} \\medskip \\textbf{Pravidla:} "
-"\\begin{itemize} \\item Pohádkový Drak je imunní vůči základním Kouzlům. "
+"\\begin{itemize} \\item Pohádkový Drak je imunní vůči běžným Kouzlům. "
 "\\item Pohádkový Drak může seslat až dvě různá Kouzla za Kolo Souboje. \\item "
 "Všechna Kouzla jsou viditelně zobrazena vedle Desky Bojiště: "
 "\\begin{enumerate} \\item První Kouzlo je \\textit{Blesk}. \\item Druhé "
