--- a/translations/the_hunt.tex/cs.po
+++ b/translations/the_hunt.tex/cs.po
@@ -452,7 +452,7 @@ msgstr ""
 "poté, co absorbují poškození. \\item Cetka: Azurový Drak zařve a přivolá "
 "ledovou bouři, která způsobí, že všechny bytosti zamrznou strachem. To má za "
 "následek, že každá Jednotka se pohybuje pouze o 1 Pole za Kolo, zatímco "
-"Azurový Drak může letět na jakékoli Pole na Desce Bojiště. \\end{itemize} "
+"Azurový Drak může letět na jakékoliv Pole na Desce Bojiště. \\end{itemize} "
 "\\item Azurový Drak je imunní vůči všem Kouzlům seslaným proti němu. \\item "
 "Posílení a vylepšení seslaná na Jednotky hráče zůstávají účinná. "
 "\\end{itemize} }"
