--- a/translations/dragoncurse_castle.tex/cs.po
+++ b/translations/dragoncurse_castle.tex/cs.po
@@ -313,7 +313,7 @@ msgstr ""
 "\\begin{itemize}\n"
 "  \\item Kdykoli je Obelisk Navštíven poprvé, hráč, který jej Navštíví, získává 2 \\svg{building_materials}.\n"
 "  \\item Náhodné Město je bráněno Hradbami a Bránou, když je vlastněno hráčem, ale má Střílnu pouze tehdy, pokud má hráč již Citadelu.\n"
-"  \\item Stejně jako jakékoli jiné Město, když je Náhodné Město vlastněno hráčem, je platným místem pro tohoto hráče k:\n"
+"  \\item Stejně jako jakékoliv jiné Město, když je Náhodné Město vlastněno hráčem, je platným místem pro tohoto hráče k:\n"
 "    \\begin{itemize}\n"
 "      \\item Umístění nově naverbovaného Sekundárního Hrdiny.\n"
 "      \\item Umístění Hlavního Hrdiny po jeho porážce.\n"
