--- a/translations/inferno_steadwicks_fall.tex/cs.po
+++ b/translations/inferno_steadwicks_fall.tex/cs.po
@@ -882,9 +882,9 @@ msgstr ""
 "  \\node at (15.9, -18.8) {\\large{{\\textbf{\\textcolor{darkcandyapplered}{F2}}}}};\n"
 "  \\node at (2, -4.5) {\\large{{\\textbf{\\textcolor{darkcandyapplered}{Steadwick}}}}};\n"
 "  \\node at (2, -5.2) {\\large{{\\textbf{\\textcolor{darkcandyapplered}{S3}}}}};\n"
-"  \\node at (7.5, -5.4) {\\large{{\\textbf{\\textcolor{darkcandyapplered}{Mapové Dílky}}}}};\n"
+"  \\node at (7.5, -5.4) {\\large{{\\textbf{\\textcolor{darkcandyapplered}{Dílky Mapy}}}}};\n"
 "  \\node at (7.5, -6.1) {\\large{{\\textbf{\\textcolor{darkcandyapplered}{Bašty}}}}};\n"
-"  \\node at (12.4, -17.8) {\\large{{\\textbf{\\textcolor{darkcandyapplered}{Mapové Dílky}}}}};\n"
+"  \\node at (12.4, -17.8) {\\large{{\\textbf{\\textcolor{darkcandyapplered}{Dílky Mapy}}}}};\n"
 "  \\node at (12.4, -18.5) {\\large{{\\textbf{\\textcolor{darkcandyapplered}{Nekropole}}}}};\n"
-"  \\node at (2, -12.3) {\\large{{\\textbf{\\textcolor{darkcandyapplered}{Mapové Dílky}}}}};\n"
+"  \\node at (2, -12.3) {\\large{{\\textbf{\\textcolor{darkcandyapplered}{Dílky Mapy}}}}};\n"
 "  \\node at (2, -13) {\\large{{\\textbf{\\textcolor{darkcandyapplered}{Hradu}}}}};"
